2004-09-06	blytkerchan
	* i386/: new directory
