@@ -1,0 +1,40 @@
+# Process this file with autoconf to produce a configure script.
+AC_PREREQ(2.53)
+AC_INIT([$$__PACKAGE__$$],[$$__VERSION__$$],[jail-ust-devel@lists.sf.net])
+#AM_INIT_AUTOMAKE([$$__PACKAGE__$$], [$$__VERSION__$$])
+AC_CONFIG_SRCDIR([configure.ac])
+
+# check the host system
+AC_CANONICAL_HOST
+AC_SUBST(ARCH, ${host_cpu})
+
+# Checks for programs.
+AC_PROG_CC
+AC_PROG_CPP
+AC_PROG_CXX
+AC_PROG_INSTALL
+AC_PROG_LN_S
+AC_PROG_MAKE_SET
+AC_PROG_LIBTOOL
+
+# Checks for libraries.
+
+# Checks for header files.
+AC_HEADER_STDC
+AC_CHECK_HEADERS([stdint.h stdlib.h string.h strings.h unistd.h])
+
+# Checks for typedefs, structures, and compiler characteristics.
+#AC_HEADER_STDBOOL
+AC_C_CONST
+AC_TYPE_SIZE_T
+AC_C_BIGENDIAN
+
+# Checks for library functions.
+dnl AC_FUNC_MALLOC
+AC_FUNC_MEMCMP
+AC_CHECK_FUNCS([memset strchr strdup])
+AC_REPLACE_FUNCS([strlwr])
+
+AC_CONFIG_FILES([Makefile])
+AC_OUTPUT
+
